--- a/pages/ex3.html
+++ b/pages/ex3.html
@@ -13,7 +13,8 @@
 
 <body>
     <div class="cover">
-        <h1>Kmin Academy</h1>
+        <img class="hacker" src="../img/cover.jpg" alt="">
+        <h1 class="letter">Kmin Academy</h1>
     </div>
     <img class="avarta" src="../img/avatar.png">
 </body>
