--- a/pages/ex4.html
+++ b/pages/ex4.html
@@ -12,10 +12,14 @@
 </head>
 
 <body>
-    <div class="box-full">
-        <h1>KMIN - ACADEMY OF COMPUTER SCIENCE </h1>
-        <img src="../img/logo.png">
+    <div id="grad1" class="box-full">
+        <h1 class="kmin">KMIN - ACADEMY OF COMPUTER SCIENCE </h1>
+        
+        <img class="logo" src="../img/logo.png">
     </div>
+    
+
+
 </body>
 
 </html>
